@@ -216,8 +216,6 @@ processAot {
     list.add("--add-opens")
     list.add("java.base/java.net=ALL-UNNAMED")
     list.add("--add-opens")
-    list.add("java.base/sun.security.action=jdk.crypto.ec")
-    list.add("--add-opens")
     list.add("java.base/java.nio=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.base/sun.nio.ch=ALL-UNNAMED")
